2002-10-19  Sebastien Pouliot  <spouliot@videotron.ca>

	* corlib_test.build: Removed all excluded cryptographic test code as 
	the cyclic dependency was removed (well commented)

2002-10-16  Nick Drochak  <ndrochak@gol.com>

	* corlib_test.build: Fix build.  Exclude tests that depend on 
	components we are not building into corlib yet.

2002-10-05  Andrew Birkett  <andy@nobugs.org>

	* corlib_linux_test.args: Added RC2Test

2002-09-23  Andrew Birkett  <andy@nobugs.org>

	* corlib_linux_test.args: Added MD5Test

2002-09-22  Andrew Birkett  <andy@nobugs.org>

	* System.Security.Cryptography/RijndaelManagedTest.cs: BlockSize
	measured in bytes, not bits.

2002-09-19  Andrew Birkett  <andy@nobugs.org>

	* System.Security.Cryptography/RijndaelManagedTest.cs: New test
	* System.Security.Cryptography/AllTests.cs: Added RijndaelManagedTest
	* corlib_linux_test.args: Added RijndaelManagedTest

2002-08-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* makefile.gnu: little changes to integrate tests in makefile system.
	* run_test.sh: script i use to run tests when i don't wanna run all.

2002-08-10  Jason Diamond  <jason@injektilo.org>

	* makefile.gnu: Added test target. Please start using it.

2002-07-24  Duncan Mak  <duncan@ximian.com>

	* corlib_linux_test.args: Add Cesar's BufferTest to the list.

2002-07-19  Martin Baulig  <martin@gnome.org>

	* makefile.gnu: Added makefile for self-hosting compile on GNU/Linux.
	Don't add this to the top-level makefile.gnu, this must be run after
	everything is compiled.

2002-07-19  Martin Baulig  <martin@gnome.org>

	The test suite now compiles with MCS on GNU/Linux :-)

	* corlib_linux_test.args: Added MCS command file to compile this.

2002-07-11  Nick Drochak  <ndrochak@gol.com>

	* .cvsignore: Ignore temp files too.

2002-06-19  Nick Drochak  <ndrochak@gol.com>

	* AllTests.cs: Add missing test: System.Runtime.Serialization.

2002-06-01  Nick Drochak  <ndrochak@gol.com>
